--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "yaw-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "set DEBUG=App & nodemon --exec babel-node src/index.js",
+    "start": "node lib/index.js",
+    "build": "npx babel src -d lib",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,8 +21,18 @@
   },
   "homepage": "https://github.com/Alpha1202/yaw-backend#readme",
   "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/node": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
+    "debug": "^4.1.1",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
