--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "yaw-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "server.js",
   "scripts": {
-    "start:dev": "set DEBUG=App & nodemon --exec babel-node src/index.js",
+    "start:dev": "set DEBUG=App & nodemon --exec babel-node server.js",
     "start": "node lib/index.js",
     "build": "npx babel src -d lib",
-    "test": "NODE_ENV=test jest --coverage --colors -i -u",
+    "test": "cross-env NODE_ENV=test nyc --require @babel/register mocha test/**.test.js --timeout 20000 --exit",
     "test:watch": "jest --watch --coverage --colors",
-    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "repository": {
     "type": "git",
@@ -27,7 +33,9 @@
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.7.0",
     "coveralls": "^3.0.7",
+    "cross-env": "^6.0.3",
     "debug": "^4.1.1",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -38,12 +46,15 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2"
