--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "yaw-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
-    "start:dev": "set DEBUG=App & nodemon --exec babel-node server.js",
-    "start": "node lib/index.js",
-    "build": "npx babel src -d lib",
-    "test": "cross-env NODE_ENV=test nyc --require @babel/register mocha test/**.test.js --timeout 20000 --exit",
+    "start:dev": "set DEBUG=App & nodemon --exec babel-node src/index.js",
+    "start": "npm run build && node lib/index.js",
+    "build": "babel src -d lib",
+    "test": "cross-env NODE_ENV=test nyc mocha --timeout 20000  --require @babel/register  test/**.test.js --exit",
     "test:watch": "jest --watch --coverage --colors",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "migrate": "sequelize db:migrate",
+    "undo:migrate": "sequelize db:migrate:undo:all",
+    "seed": "sequelize db:seed:all"
   },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
+  "nyc": {
+    "exclude": [
+      "src/helpers/*.js",
+      "src/index.js",
+      "src/socialAuthConfig/SocialConfig.js"
     ]
   },
   "repository": {
@@ -32,7 +36,8 @@
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
     "@babel/register": "^7.7.0",
     "coveralls": "^3.0.7",
     "cross-env": "^6.0.3",
@@ -46,18 +51,32 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.7.0",
+    "@babel/runtime": "^7.7.2",
+    "@babel/runtime-corejs2": "^7.7.2",
+    "@hapi/joi": "^16.1.7",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "core-js": "^2.6.10",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "faker": "^4.1.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-instagram": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "sinon": "^7.5.0",
+    "sinon-chai": "^3.3.0"
   },
   "engines": {
     "node": "10.16.3"
