--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "yaw-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "server.js",
   "scripts": {
-    "start:dev": "set DEBUG=App & nodemon --exec babel-node src/index.js",
+    "start:dev": "set DEBUG=App & nodemon --exec babel-node server.js",
     "start": "node lib/index.js",
     "build": "npx babel src -d lib",
-    "test": "jest"
+    "test": "NODE_ENV=test jest --coverage --colors -i -u",
+    "test:watch": "jest --watch --coverage --colors",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -25,15 +27,20 @@
     "@babel/core": "^7.6.4",
     "@babel/node": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
+    "coveralls": "^3.0.7",
     "debug": "^4.1.1",
     "eslint": "^6.6.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.4"
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
