--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "yaw-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
-    "start:dev": "set DEBUG=App & nodemon --exec babel-node server.js",
+    "start:dev": "set DEBUG=App & nodemon --exec babel-node src/index.js",
     "start": "node lib/index.js",
     "build": "npx babel src -d lib",
     "test": "NODE_ENV=test jest --coverage --colors -i -u",
