--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,25 @@ jobs:
   build:
     docker:
       - image: circleci/node:10.16.0
-
+      - image: circleci/postgres:9.6.5-alpine-ram
         environment:
+          POSTGRES_USER: ezshkjji
+          POSTGRES_DB: ezshkjji
           CC_TEST_REPORTER_ID: CC_TEST_REPORTER_ID
+          
+          
 
     working_directory: ~/repo
 
     steps:
       - checkout
-
+    
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
             - v1-dependencies-
-
+    
       - run: npm install
       - run: npm test && npm run coverage
+
+        
