--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "yaw-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
-    "start:dev": "set DEBUG=App & nodemon --exec babel-node server.js",
-    "start": "node lib/index.js",
-    "build": "npx babel src -d lib",
+    "start:dev": "set DEBUG=App & nodemon --exec babel-node src/index.js",
+    "start": "npm run build && node lib/index.js",
+    "build": "babel src -d lib",
     "test": "cross-env NODE_ENV=test nyc --require @babel/register mocha test/**.test.js --timeout 20000 --exit",
     "test:watch": "jest --watch --coverage --colors",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "migrate": "sequelize db:migrate",
+    "undo:migrate": "sequelize db:migrate:undo:all",
+    "seed": "sequelize db:seed:all"
   },
   "jest": {
     "testEnvironment": "node",
@@ -57,7 +60,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.2"
+    "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.1"
   },
   "engines": {
     "node": "10.16.3"
